--- a/app/views/donors/_form.html.erb
+++ b/app/views/donors/_form.html.erb
@@ -1,3 +1,4 @@
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
 <%= form_for(donor) do |f| %>
   <% if donor.errors.any? %>
     <div id="error_explanation">
@@ -40,3 +41,13 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+<script type="text/javascript">
+function initialize() {
+
+var input = document.getElementById('donor_address');
+var autocomplete = new google.maps.places.Autocomplete(input);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
